Replace bun with junit-js for JS tests; fix inline validator generation bug (#31)
- Add junit-js 2.0.0 dependency with GraalVM exclusions to avoid version conflicts
- Add JUnit Vintage engine to run JUnit 4 tests under JUnit 5 Platform
- Configure Surefire to discover *TestSuite.java files
- Delete bun-based src/test/js/ directory (replaced by junit-js)
- Add JtdEsmJsTestSuite.java to run JS tests via @RunWith(JSRunner.class)
- Add boolean-schema.test.js and nested-elements-empty-focused.test.js
  - Tests run in GraalVM polyglot, no external JS runtime needed
- Fix EsmRenderer bug where inline validator functions were never emitted:
  - Add generateInlineFunctions() method to emit collected inline validators
  - Fix collision issue by using counter instead of hashCode for function names
  - Support nested elements/schemas that require multiple inline validators

Test results: 29 tests pass in jtd-esm-codegen (17 Java + 2 property + 10 JS)